; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmci/extr_vmci_doorbell.c_vmci_doorbell_notify.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vmware/vmci/extr_vmci_doorbell.c_vmci_doorbell_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmci_handle = type { i32 }

@VMCI_PRIVILEGE_ALL_FLAGS = common dso_local global i32 0, align 4
@VMCI_ERROR_INVALID_ARGS = common dso_local global i32 0, align 4
@VMCI_INVALID_HANDLE = common dso_local global %struct.vmci_handle zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vmci_doorbell_notify(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.vmci_handle, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.vmci_handle, align 4
  %7 = getelementptr inbounds %struct.vmci_handle, %struct.vmci_handle* %4, i32 0, i32 0
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %5, align 4
  %8 = getelementptr inbounds %struct.vmci_handle, %struct.vmci_handle* %4, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @VMCI_HANDLE_INVALID(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %18, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @VMCI_PRIVILEGE_ALL_FLAGS, align 4
  %15 = xor i32 %14, -1
  %16 = and i32 %13, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %12, %2
  %19 = load i32, i32* @VMCI_ERROR_INVALID_ARGS, align 4
  store i32 %19, i32* %3, align 4
  br label %26

20:                                               ; preds = %12
  %21 = bitcast %struct.vmci_handle* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %21, i8* align 4 bitcast (%struct.vmci_handle* @VMCI_INVALID_HANDLE to i8*), i64 4, i1 false)
  %22 = load i32, i32* %5, align 4
  %23 = getelementptr inbounds %struct.vmci_handle, %struct.vmci_handle* %4, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @vmci_doorbell_notify_as_guest(i32 %24, i32 %22)
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %20, %18
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i64 @VMCI_HANDLE_INVALID(i32) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @vmci_doorbell_notify_as_guest(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
